--- a/src/index.css
+++ b/src/index.css
@@ -143,28 +143,44 @@ body {
     opacity: 0.9;
     border-width: 9px;
   }
-  25% {
+  20% {
     opacity: 0.8;
     border-width: 8px;
+  }
+  30% {
+    opacity: 0.7;
+    border-width: 7px;
   }
   40% {
     opacity: 0.6;
     border-width: 6px;
   }
+  50% {
+    opacity: 0.5;
+    border-width: 5px;
+  }
   60% {
     opacity: 0.4;
     border-width: 4px;
   }
+  70% {
+    opacity: 0.3;
+    border-width: 3px;
+  }
   80% {
     opacity: 0.2;
-    border-width: 3px;
+    border-width: 2px;
+  }
+  90% {
+    opacity: 0.1;
+    border-width: 1px;
   }
   95% {
     opacity: 0.05;
-    border-width: 2px;
+    border-width: 1px;
   }
   100% {
-    transform: scale(15);
+    transform: scale(50);
     opacity: 0;
     border-width: 1px;
   }
